[package]
name = "oxidian"
version = "0.1.0"
edition = "2021"
default-run = "main"
authors = ["Mathijs Schuurmans <mathijs.schuurmans@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
lazy_static = "1.4.0"
pulldown-cmark = "0.9.2"
regex = "1.8.1"
serde = "1.0.163"
thiserror = "1.0.40"
walkdir = "2.3.3"
yaml-rust = "0.4.5"
