[package]
name = "oxidian"
version = "0.1.0"
edition = "2021"
default-run = "main"
authors = ["Mathijs Schuurmans <mathijs.schuurmans@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.2.7", features = ["derive"] }
figment = { version = "0.10.13", features = ["toml"] }
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
pulldown-cmark = "0.9.2"
regex = "1.8.1"
serde = "1.0.163"
serde_derive = "1.0.193"
serde_json = "1.0.113"
slugify = "0.1.0"
thiserror = "1.0.40"
toml = "0.8.8"
walkdir = "2.3.3"
yaml-rust = "0.4.5"

[dev-dependencies]
tempfile = "3.6.0"
